# claude-pretool-sidecar

./: .dockerignore  .gitignore  AGENTS.md  CURRENT_WORK.md  Cargo.toml  FUTURE_WORK.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/design/: architecture.md  claude-code-hooks-reference.md  configuration.md  log-rotation.md  mcp-permission-tool-analysis.md  monitor-architecture.md  stdio-protocol.md  voting-quorum.md
docs/guidelines/: README.md  testing.md
examples/: config-logging-only.toml  config-multi-provider.toml  config-single-gatekeeper.toml  config-with-notifications.toml  config-with-rules.toml
examples/providers/: README.md  approval-logger.sh  ask-user.sh  dangerous-command-blocker.sh  file-path-policy.py  rate-limiter.sh
packaging/: README.md  release.sh
packaging/aur/: PKGBUILD
packaging/brew/: claude-pretool-sidecar.rb
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/resources/: config-schema.md  hook-setup.md  troubleshooting.md
plugin/scripts/: check-sidecar.sh  install-hooks.sh  uninstall-hooks.sh
qa/: README.md
qa/checklists/: live-claude-code-manual.md  manual-tests.md  programmatic-tests.md  standalone-programmatic.md
qa/docker/: .dockerignore  Dockerfile  Dockerfile.claude-code  Dockerfile.standalone  cpts-claude-code.sh  cpts-standalone.sh  qa-docker.sh
qa/helpers/: check-audit-log.sh  gen-config.sh  gen-payload.sh  provider-echo.sh
qa/scripts/: live-claude-code-hook-execution.sh  live-claude-code-hook-install.sh  run-all-live-claude-code.sh  run-all-qa.sh  run-all-standalone.sh  (+11 more)
ramblings/: 2026-03-23--claude-code-docker-install-methods.md
src/: audit.rs  cache.rs  cli.rs  config.rs  health.rs  hook.rs  main.rs  monitor.rs  provider.rs  quorum.rs  rules.rs
tests/: integration_test.rs
unstructured/: init-prompt-claude-pretool-sidecar-transcript-voice-notes.md
(+17 files in other folders)
