[package]
name = "claude-pretool-sidecar"
version = "0.1.0"
edition = "2024"
description = "A composable sidecar for Claude Code hooks that aggregates tool-approval votes from multiple providers"
license = "MIT"
repository = "https://github.com/shibuido/claude-pretool-sidecar"
homepage = "https://github.com/shibuido/claude-pretool-sidecar"
readme = "README.md"
keywords = ["claude-code", "hooks", "tool-approval", "sidecar"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["qa/", "tests/", ".claude/", "unstructured/", "ramblings/"]

[[bin]]
name = "claude-pretool-sidecar"
path = "src/main.rs"

[[bin]]
name = "claude-pretool-logger"
path = "src/bin/logger.rs"

[[bin]]
name = "claude-pretool-analyzer"
path = "src/bin/analyzer.rs"

[[bin]]
name = "claude-pretool-notifier"
path = "src/bin/notifier.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
wait-timeout = "0.2"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
